--- a/Todo.Web/Components/Pages/ProjectPage.razor.css
+++ b/Todo.Web/Components/Pages/ProjectPage.razor.css
@@ -116,7 +116,7 @@ span{
     border-radius: 5px;
     margin-top: 10px;
     position: absolute;
-    left: 100px; /* Increase this value as needed */
+    left: 100px;
     z-index: 1000;
     color: #ffffff;
     display: flex;
@@ -169,17 +169,14 @@ span{
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
-/* Reflect Selected Color on Task Container */
 .task-container[data-label-color] {
     border-left: 5px solid var(--label-color, #f1ecec);
 }
 
-/* Dropdown Container Position */
 .dropdown-container {
     position: relative;
 }
 
-/* Modify Button Styling */
 .modify-button {
     background: none;
     border: 1px solid #000000; /* Add a solid black border */
@@ -223,4 +220,9 @@ span{
 
 .color-option.selected {
     border: 2px solid #000;
+}
+
+.task-label{
+    border-radius: 5px;
+    text-align: center;
 }
